[package]
name = "rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.1"
bevy_asset_loader = "0.15.0"
bevy_common_assets = { version = "0.5.0", features = ["yaml"] }
bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
